--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -33,7 +33,7 @@
             android:layout_gravity="center|right"
             android:layout_marginStart="321dp"
             android:layout_marginTop="20dp"
-            android:layout_marginEnd="0dp"
+            android:layout_marginEnd="20dp"
             android:layout_marginBottom="20dp"
             android:background="@drawable/search_tbutton"
             android:scaleType="centerInside"
@@ -53,11 +53,12 @@
         />
 
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginHorizontal="10dp"
-        android:background="#aaa" />
+<!--    <View-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="1dp"-->
+<!--        toptop-->
+<!--        android:layout_marginHorizontal="10dp"-->
+<!--        android:background="#aaa" />-->
 
     <TextView
         android:id="@+id/showID"
