--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -37,7 +37,7 @@
             android:id="@+id/tv_welcome"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Pinterest에 오신 것을 환영합니다"
+            android:text="Team55에 오신 것을 환영합니다"
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="30sp"
