--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,83 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".SearchFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-        <EditText
-            android:id="@+id/searchWord"
-            android:layout_width="380dp"
+        <RelativeLayout
+            android:id="@+id/layout_search"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_marginTop="20dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="40dp"
-            android:paddingLeft="23dp"
-            android:background="@drawable/round_corner"
-            android:hint="찾을 사용자의 이름을 입력하세요"
-            android:textSize = "17sp"
-            android:inputType="text"
-            android:minHeight="48dp" />
+            android:layout_margin="20dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <androidx.appcompat.widget.AppCompatEditText
+                android:id="@+id/searchWord"
+                android:layout_width="350dp"
+                android:layout_alignParentStart="true"
+                android:layout_height="wrap_content"
+                android:background="@drawable/round_corner"
+                android:hint="찾을 사용자의 이름을 입력하세요"
+                android:inputType="text"
+                android:minHeight="48dp"
+                android:paddingLeft="23dp"
+                android:textSize="17sp" />
 
 
-        <ImageButton
-            android:id="@+id/search"
-            android:layout_width="50dp"
-            android:layout_height="48dp"
-            android:layout_gravity="center|right"
-            android:layout_marginStart="321dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="0dp"
-            android:layout_marginBottom="20dp"
-            android:background="@drawable/search_tbutton"
-            android:scaleType="centerInside"
-            android:src="@drawable/search_icon_resize"/>
-    </RelativeLayout>
+            <androidx.appcompat.widget.AppCompatImageButton
+                android:id="@+id/search"
+                android:layout_width="50dp"
+                android:layout_height="48dp"
+                android:layout_alignParentEnd="true"
+                android:background="@drawable/search_tbutton"
+                android:src="@drawable/search_icon_resize" />
+        </RelativeLayout>
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/showID"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="23dp"
+        android:layout_marginTop="20dp"
+        android:text="아이디"
+        android:textColor="@color/gray"
+        android:textSize="15sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@id/layout_search"
+        app:layout_constraintTop_toBottomOf="@id/layout_search" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/showEmail"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="170dp"
+        android:layout_marginTop="20dp"
+        android:text="이메일"
+        android:textColor="@color/gray"
+        android:textSize="15sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toEndOf="@id/showID"
+        app:layout_constraintTop_toBottomOf="@id/layout_search" />
+
+    <View
+        android:id="@+id/view_sector"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:background="#aaa"
+        app:layout_constraintStart_toStartOf="@id/layout_search"
+        app:layout_constraintTop_toBottomOf="@id/showID" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/FragrecyclerView"
         android:layout_width="387dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="130dp"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_margin="20dp"
+        android:padding="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        />
+        app:layout_constraintTop_toBottomOf="@id/view_sector" />
 
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginHorizontal="10dp"
-        android:background="#aaa" />
-
-    <TextView
-        android:id="@+id/showID"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="23dp"
-        android:layout_marginTop="100dp"
-        android:textSize="15sp"
-        android:textStyle="bold"
-        android:textColor="@color/gray"
-        android:text="아이디" />
-    <TextView
-        android:id="@+id/showEmail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="170dp"
-        android:layout_marginTop="100dp"
-        android:textSize="15sp"
-        android:textColor="@color/gray"
-        android:textStyle="bold"
-        android:text="이메일" />
-
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
