--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -3,10 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="200dp"
-    android:layout_height="wrap_content"
-    android:layout_marginEnd="16dp"
-    android:paddingStart="8dp"
-    android:paddingEnd="8dp">
+    android:paddingEnd="18dp"
+    android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/card_view_post"
@@ -24,7 +22,7 @@
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/iv_post_image"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="400dp"
                 android:scaleType="center"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -32,7 +30,6 @@
                 tools:src="@mipmap/ic_launcher_bugi" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
-
 
     <TextView
         android:id="@+id/tv_post_title"
